# lerning_cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Compiler_DemoGame_With_Installer.yaml  compiler.yml  compiler_DemoGame.yaml  compiler_TopDown.yaml  compiler_TopDown_Web.yaml
Dasher/: compiler.yaml  dasher.cpp  main.code-workspace
DemoGame/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  EnumSystemsAvailable.h  Experience.cpp  Experience.h  Game.cpp  Game.h  GameState.cpp  GameState.h  GameStateEnum.h  GigasCompiler.py  Globals.cpp  Globals.h  ICollisionWithBullet.h  IGameState.h  IMainMenu.h  IPlayer.h  IRenderable.h  IState.cpp  IState.h  ISystem.cpp  ISystem.h  IUpdatable.h  MainMenu.cpp  MainMenu.h  Map.cpp  Map.h  ObjectInScreen.cpp  ObjectInScreen.h  PerySystem.cpp  PerySystem.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  PowerUpLunchBullet.cpp  PowerUpLunchBullet.h  PowerUpOrbit.cpp  (+18 more)
TopDown/: BaseCharacter.cpp  BaseCharacter.h  Character.cpp  Character.h  Enemy.cpp  Enemy.h  Makefile  Prop.cpp  main.code-workspace  main.cpp
TopDown/Assets/MapSource/: Map1.tsx  map1.tmx
TopDown/Assets/src/: Character.cpp  Character.h  Prop.h
